# Video-Filtering-System

./: .gitignore  CMakeLists.txt  README.md
data/: time.txt
include/: DA2Network.hpp  faceDetect.h  filter.h  filterApp.h
src/: faceDetect.cpp  filter.cpp  filterApp.cpp  imgDisplay.cpp  timeBlur.cpp  vidDisplay.cpp
